@@ -136,21 +136,21 @@ def t_ANY_BOOL_LITERAL(t):
 # Match #pragma
 # This is a special-case because there can be all sorts of random stuff after #pragma and we want to eat it all
 def t_PRAGMA(t):
-    r'(?m)^\#pragma.*'
+    r'(?m)^\#pragma.+?(?=(\/\/|\/\*|$))'
     return t
 
 
 # Match #error
 # This is a special-case because there can be all sorts of random stuff after #error and we want to eat it all
 def t_PPERROR(t):
-    r'(?m)^\#error.*'
+    r'(?m)^\#error.+?(?=(\/\/|\/\*|$))'
     return t
 
 
 # Match #define
 # This is a special-case because there can be all sorts of random stuff after #define and we want to eat it all
 def t_PPDEFINE(t):
-    r'(?m)^\#define.*'
+    r'(?m)^\#define.+?(?=(\/\/|\/\*|$))'
     return t
 
 
